--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Odin Recipies</title>
+    <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
-    <h1> Odin Recipies </h1>
+    <h1 class="title"> Odin Recipies </h1>
     <ul>
-       <li><a href="recipes/lokilasagna.html"> Loki's Lasagna</a></li>
-       <li><a href="recipes/thortenders.html"> Thor's Tenders</a></li>
-       <li><a href="recipes/odinomellete.html"> Odin's Omellete</a></li>
+       <li class="options"><a href="recipes/lokilasagna.html"> Loki's Lasagna</a></li>
+       <li class="options"><a href="recipes/thortenders.html"> Thor's Tenders</a></li>
+       <li class="options"><a href="recipes/odinomellete.html"> Odin's Omellete</a></li>
     </ul>
 </body>
 </html>
